Add all the things

--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <main>
+  <div>
     <h1>Dung Beetle</h1>
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
-  </main>
+    <ul>
+      <li>Kingdom: Animalia</li>
+      <li>Phylum: Arthropoda</li>
+      <li>Class: Insecta</li>
+      <li>Order: Coleoptera</li>
+      <li>Suborder: Polyphaga</li>
+      <li>Superfamily: Scarabaeoidea</li>
+      <li>Family: Scarabidae</li>
+    </ul>
+  </div>
 </body>
 </html>
