Add all the things

--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
 </head>
 <body>
   <div>
+    <section>
     <h1>Dung Beetle</h1>
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
     <ul>
-      <li>Kingdom: Animalia</li>
-      <li>Phylum: Arthropoda</li>
-      <li>Class: Insecta</li>
-      <li>Order: Coleoptera</li>
-      <li>Suborder: Polyphaga</li>
-      <li>Superfamily: Scarabaeoidea</li>
-      <li>Family: Scarabidae</li>
+      <li>Kingdom</li>
+      <li>Animalia</li>
+      <li>Phylum</li>
+      <li>Arthropoda</li>
+      <li>Class</li>
+      <li>Insecta</li>
+      <li>Order</li>
+      <li>Coleoptera</li>
+      <li>Suborder</li>
+      <li>Polyphaga</li>
+      <li>Superfamily</li>
+      <li>Scarabaeoidea</li>
+      <li>Family</li>
+      <li>Scarabidae</li>
     </ul>
+  </section>
   </div>
 </body>
 </html>
