Add all the things

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Dung Beetle</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -12,20 +13,20 @@
     <h1>Dung Beetle</h1>
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
     <ul>
-      <li>Kingdom</li>
-      <li>Animalia</li>
-      <li>Phylum</li>
-      <li>Arthropoda</li>
-      <li>Class</li>
-      <li>Insecta</li>
-      <li>Order</li>
-      <li>Coleoptera</li>
-      <li>Suborder</li>
-      <li>Polyphaga</li>
-      <li>Superfamily</li>
-      <li>Scarabaeoidea</li>
-      <li>Family</li>
-      <li>Scarabidae</li>
+      <li class="left">Kingdom</li>
+      <li class="right">Animalia</li>
+      <li class="left">Phylum</li>
+      <li class="right">Arthropoda</li>
+      <li class="left">Class</li>
+      <li class="right">Insecta</li>
+      <li class="left">Order</li>
+      <li class="right">Coleoptera</li>
+      <li class="left">Suborder</li>
+      <li class="right">Polyphaga</li>
+      <li class="left">Superfamily</li>
+      <li class="right">Scarabaeoidea</li>
+      <li class="left">Family</li>
+      <li class="right">Scarabidae</li>
     </ul>
   </section>
   </div>
