Add all the things

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <li class="left">Family</li>
         <li class="right">Scarabidae</li>
       </ul>
+      <div class="learn">
+        <a class="learn" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
+      </div>
     </section>
   </div>
 </body>
