--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
       <h1>Dung Beetle</h1>
       <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
-      <div>
+      <div class="list">
         <ul>
           <li class="left">Kingdom</li>
           <li class="right">Animalia</li>
