Change all the lists

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
       <h2>Dung Beetle</h2>
       <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
       <div class="list">
-        <ul>
-          <li class="left">Kingdom</li>
-          <li class="right">Animalia</li>
-          <li class="left">Phylum</li>
-          <li class="right">Arthropoda</li>
-          <li class="left">Class</li>
-          <li class="right">Insecta</li>
-          <li class="left">Order</li>
-          <li class="right">Coleoptera</li>
-          <li class="left">Suborder</li>
-          <li class="right">Polyphaga</li>
-          <li class="left">Superfamily</li>
-          <li class="right">Scarabaeoidea</li>
-          <li class="left">Family</li>
-          <li class="right">Scarabidae</li>
-        </ul>
+        <d1>
+          <dt class="left">Kingdom</dt>
+          <dd class="right">Animalia</dd>
+          <dd class="left">Phylum</dd>
+          <dd class="right">Arthropoda</dd>
+          <dd class="left">Class</dd>
+          <dd class="right">Insecta</dd>
+          <dd class="left">Order</dd>
+          <dd class="right">Coleoptera</dd>
+          <dd class="left">Suborder</dd>
+          <dd class="right">Polyphaga</dd>
+          <dd class="left">Superfamily</dd>
+          <dd class="right">Scarabaeoidea</dd>
+          <dd class="left">Family</dd>
+          <dd class="right">Scarabidae</dd>
+        </dl>
       </div>
-      <div class="learn">
-        <a class="learn" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
+      <div class="link-card">
+        <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
       </div>
     </section>
   </div>
