Add all the things

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <li class="right">Scarabidae</li>
         </ul>
       </div>
-      <div class="link-card">
-        <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
+      <div class="link-cards">
+        <center><a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a></center>
       </div>
     </section>
   </div>
