--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
       </div>
       <div class="link-cards">
-        <center><a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a></center>
+        <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
       </div>
     </section>
   </div>
