Change all the things

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div>
+  <div class= "link-card">
     <section>
       <h2>Dung Beetle</h2>
       <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
@@ -30,8 +30,8 @@
           <li class="right">Scarabidae</li>
         </ul>
       </div>
-      <div class="link-cards">
-        <a class="link-card btn" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
+      <div class="outside">
+        <a class="btn" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
       </div>
     </section>
   </div>
