Fix the error code

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div>
+  <a class="link-cards">
     <section>
-      <h2 class="link-card">Dung Beetle</h2>
+      <h2>Dung Beetle</h2>
       <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
       <div class="list">
         <ul>
@@ -30,10 +30,10 @@
           <li class="right">Scarabidae</li>
         </ul>
       </div>
-      <div class="link-cards">
-        <a class="link-card btn" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
+      <div class="more">
+        <a class="more btn" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
       </div>
     </section>
-  </div>
+  </a>
 </body>
 </html>
