Fix naming of link card

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <a class="link-cards">
+  <a class="link-card">
     <section>
       <h2>Dung Beetle</h2>
       <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
