Add in link card class

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
       </div>
       <div class="more">
-        <a class="more btn" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
+        <a class="more" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
       </div>
     </a>
   </section>
