--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <section>
-    <a class="link-card">
+    <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">
       <h2>Dung Beetle</h2>
       <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
       <div class="list">
@@ -31,7 +31,7 @@
         </ul>
       </div>
       <div class="more">
-        <a class="more" href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
+        <p class="more" >Learn more…</p>
       </div>
     </a>
   </section>
