Change the list style

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
       <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
       <div class="list">
         <dl>
-          <li class="left">Kingdom</li>
-          <li class="right">Animalia</li>
-          <li class="left">Phylum</li>
-          <li class="right">Arthropoda</li>
-          <li class="left">Class</li>
-          <li class="right">Insecta</li>
-          <li class="left">Order</li>
-          <li class="right">Coleoptera</li>
-          <li class="left">Suborder</li>
-          <li class="right">Polyphaga</li>
-          <li class="left">Superfamily</li>
-          <li class="right">Scarabaeoidea</li>
-          <li class="left">Family</li>
-          <li class="right">Scarabidae</li>
+          <dt class="left">Kingdom</dt>
+          <dt class="right">Animalia</dt>
+          <dt class="left">Phylum</dt>
+          <dt class="right">Arthropoda</dt>
+          <dt class="left">Class</dt>
+          <dt class="right">Insecta</dt>
+          <dt class="left">Order</dt>
+          <dt class="right">Coleoptera</dt>
+          <dt class="left">Suborder</dt>
+          <dt class="right">Polyphaga</dt>
+          <dt class="left">Superfamily</dt>
+          <dt class="right">Scarabaeoidea</dt>
+          <dt class="left">Family</dt>
+          <dt class="right">Scarabidae</dt>
         </ul>
       </div>
       <div class="more">
