--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
       <div class="list">
         <dl>
-          <dt class="left">Kingdom</dt>
+          <dd class="left">Kingdom</dd>
           <dt class="right">Animalia</dt>
           <dt class="left">Phylum</dt>
           <dt class="right">Arthropoda</dt>
