Change all the list tags

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
       <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
       <div class="list">
         <dl>
-          <dd class="left">Kingdom</dd>
-          <dt class="right">Animalia</dt>
+          <dt class="left">Kingdom</ddt>
+          <dd class="right">Animalia</dd>
           <dt class="left">Phylum</dt>
-          <dt class="right">Arthropoda</dt>
+          <dd class="right">Arthropoda</dd>
           <dt class="left">Class</dt>
-          <dt class="right">Insecta</dt>
+          <dd class="right">Insecta</dd>
           <dt class="left">Order</dt>
-          <dt class="right">Coleoptera</dt>
+          <dd class="right">Coleoptera</dd>
           <dt class="left">Suborder</dt>
-          <dt class="right">Polyphaga</dt>
+          <dd class="right">Polyphaga</dd>
           <dt class="left">Superfamily</dt>
-          <dt class="right">Scarabaeoidea</dt>
+          <dd class="right">Scarabaeoidea</dd>
           <dt class="left">Family</dt>
-          <dt class="right">Scarabidae</dt>
+          <dd class="right">Scarabidae</dd>
         </dl>
       </div>
       <div class="more">
